--- a/sound/soc/s3c24xx/Kconfig
+++ b/sound/soc/s3c24xx/Kconfig
@@ -46,9 +46,6 @@ config SND_S3C_SOC_AC97
 	tristate
 	select SND_SOC_AC97_BUS
 
-config SND_S5P_SOC_WM8994
-	tristate
-
 config SND_S3C24XX_SOC_NEO1973_WM8753
 	tristate "SoC I2S Audio support for NEO1973 - WM8753"
 	depends on SND_S3C24XX_SOC && MACH_NEO1973_GTA01
@@ -83,19 +80,13 @@ config SND_S3C64XX_SOC_WM8580
 	help
 	  Say Y if you want to add support for SoC audio on the SMDK6410.
 
-config  SND_S5P_WM8994 
-	tristate "SoC I2S Audio support for WM8994-I2S on UNIVERSAL"
+config SND_SOC_HERRING
+	tristate "Audio support for Herring/Nexus S"
+	depends on MACH_HERRING
 	depends on SND_S3C24XX_SOC
-	select SND_S5P_SOC_WM8994
+	depends on MFD_WM8994
 	select SND_SOC_WM8994
 	select SND_S5PC1XX_SOC_I2S 
-
-config	SND_S5P_WM8994_MASTER
-	bool "WM8994 master"
-	depends on SND_S5P_SOC_WM8994
-	default y 
-	help
-	  Say Y if you want to run SoC as I2S-Slave and CODEC as I2S-Master.
 
 config  S5P_INTERNAL_DMA
 	bool "IIS operate with Internal DMA"
