--- a/sound/soc/s3c24xx/Kconfig
+++ b/sound/soc/s3c24xx/Kconfig
@@ -86,15 +86,15 @@ config SND_SOC_HERRING
 	depends on SND_S3C24XX_SOC
 	depends on MFD_WM8994
 	select SND_SOC_WM8994
-	select SND_S5PC1XX_SOC_I2S 
+	select SND_S5PC1XX_SOC_I2S
 
 config  S5P_INTERNAL_DMA
 	bool "IIS operate with Internal DMA"
-	depends on SND_S5P_SOC_WM8994
+	depends on SND_S5PC1XX_SOC_I2S
 	default y
 	help
 	  Say Y for IIS to operate with Internal DMA(IIS's own DMA)
-	 
+
 config SND_S3C24XX_SOC_SMDK2443_WM9710
 	tristate "SoC AC97 Audio support for SMDK2443 - WM9710"
 	depends on SND_S3C24XX_SOC && MACH_SMDK2443
