--- a/arch/arm/configs/herring_defconfig
+++ b/arch/arm/configs/herring_defconfig
@@ -197,6 +197,7 @@ CONFIG_OPTICAL_GP2A=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_MAX8893=y
 CONFIG_REGULATOR_MAX8998=y
+CONFIG_REGULATOR_WM8994=y
 CONFIG_MFD_MAX8998=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_VIDEO_DEV=y
@@ -226,7 +227,9 @@ CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_SOC=y
 CONFIG_SND_S3C24XX_SOC=y
-CONFIG_SND_S5P_WM8994=y
+CONFIG_SND_SOC_HERRING=y
+CONFIG_GPIO_WM8994=y
+CONFIG_MFD_WM8994=y
 # CONFIG_HID_SUPPORT is not set
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
