--- a/drivers/video/omap2/displays/Kconfig
+++ b/drivers/video/omap2/displays/Kconfig
@@ -48,4 +48,17 @@ config PANEL_ACX565AKM
 	select BACKLIGHT_CLASS_DEVICE
 	help
 	  This is the LCD panel used on Nokia N900
+
+config PANEL_TPO_TD028TTEC1
+	tristate "Toppoly TD028TTEC1 Panel"
+	depends on OMAP2_DSS_DSI
+	help
+	  TPO panel used by Openmoko.
+
+config PANEL_ORTUS_COM37H3M05DTC
+	tristate "Ortustech COM37H3M05DTC Panel"
+	depends on OMAP2_DSS_DSI
+	help
+	  Ortustech panel used by GTA04 Custom variant.
+
 endmenu
