--- a/sound/soc/omap/Makefile
+++ b/sound/soc/omap/Makefile
@@ -23,7 +23,8 @@ snd-soc-sdp3430-objs := sdp3430.o
 snd-soc-omap-abe-twl6040-objs := omap-abe-twl6040.o
 snd-soc-omap3pandora-objs := omap3pandora.o
 snd-soc-omap3beagle-objs := omap3beagle.o
-snd-soc-gta04-objs := gta04-audio.o gta04-voice.o gta04-headset.o gta04-fm.o
+snd-soc-gta04-objs := gta04-audio.o gta04-voice.o gta04-headset.o 
+#gta04-fm.o
 snd-soc-zoom2-objs := zoom2.o
 snd-soc-igep0020-objs := igep0020.o
 snd-soc-omap4-hdmi-objs := omap4-hdmi-card.o
