--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -1200,7 +1200,7 @@ CONFIG_BT_HCIUART_BCSP=y
 # CONFIG_BT_MRVL is not set
 CONFIG_MSM_BT_POWER=y
 # CONFIG_AF_RXRPC is not set
-CONFIG_FIB_RULES=y
+# CONFIG_FIB_RULES is not set
 CONFIG_WIRELESS=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
