--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -807,7 +807,6 @@ CONFIG_NET=y
 #
 CONFIG_PACKET=y
 CONFIG_UNIX=y
-# CONFIG_UNIX_DIAG is not set
 CONFIG_XFRM=y
 CONFIG_XFRM_USER=y
 # CONFIG_XFRM_SUB_POLICY is not set
@@ -1443,12 +1442,11 @@ CONFIG_NET_CORE=y
 CONFIG_MII=y
 # CONFIG_IFB is not set
 # CONFIG_NET_TEAM is not set
-# CONFIG_MACVLAN is not set
 # CONFIG_NETCONSOLE is not set
 # CONFIG_NETPOLL is not set
 # CONFIG_NET_POLL_CONTROLLER is not set
 CONFIG_TUN=y
-# CONFIG_VETH is not set
+
 
 #
 # CAIF transport drivers
@@ -3817,3 +3815,13 @@ CONFIG_CRYPTO_HW=y
 CONFIG_BINARY_PRINTF=y
 CONFIG_DECOMPRESS_BZIP2=y
 CONFIG_DECOMPRESS_LZMA=y
+
+# Needed for LXC
+CONFIG_VETH=y
+CONFIG_MACVLAN=y
+CONFIG_VLAN_8021Q=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_IP6_NF_TARGET_MASQUERADE=y
+CONFIG_UNIX_DIAG=y
+CONFIG_PACKET_DIAG=y
+CONFIG_NETLINK_DIAG=y
