--- a/arch/arm/configs/tenderloin_android_defconfig
+++ b/arch/arm/configs/tenderloin_android_defconfig
@@ -17,7 +17,7 @@ CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_ARM_TICKET_LOCKS=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+# CONFIG_RWSEM_GENERIC_SPINLOCK is not set
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -344,7 +344,7 @@ CONFIG_MSM_RPM=y
 # CONFIG_MSM_RPM_SMD is not set
 CONFIG_MSM_MPM=y
 CONFIG_MSM_XO=y
-CONFIG_MSM_REMOTE_SPINLOCK_LDREX=y
+# CONFIG_MSM_REMOTE_SPINLOCK_LDREX is not set
 CONFIG_MSM_ADM3=y
 
 #
@@ -3796,7 +3796,7 @@ CONFIG_DEBUG_FS=y
 CONFIG_DEBUG_OBJECTS=y
 CONFIG_DEBUG_OBJECTS_TIMERS=y
 CONFIG_DEBUG_OBJECTS_ENABLE_DEFAULT=1
-CONFIG_DEBUG_SPINLOCK=y
+# CONFIG_DEBUG_SPINLOCK is not set
 CONFIG_DEBUG_MUTEXES=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_LIST=y
